# icfp2020

./: .gitignore  README.md  compile-result.sh  default.nix  simple.txt  utdemir-icfp2020.cabal
src/: Eval.hs  Main.hs  Parse.hs  Util.hs  Visualize.hs
test/: Test.hs
