cabal-version:       2.2

name:                utdemir-icfp2020
synopsis:            My submission for ICFP Programming Contest 2020
version:             0.0.1.0
homepage:            https://github.com/utdemir/utdemir-icfp2020
license:             BSD-3-Clause
author:              Utku Demir
maintainer:          Utku Demir
copyright:           Utku Demir
category:            Control
build-type:          Simple

common common-args
  default-language:   Haskell2010
  build-depends:      base
                    , bytestring
                    , aeson
                    , http-conduit
                    , utf8-string
                    , attoparsec
                    , split
                    , containers

executable main
  import:             common-args
  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -threaded -O2 -rtsopts -with-rtsopts=-N


test-suite utdemir-icfp2020-tests
  import:           common-args
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/ src/
  main-is:          Test.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    hedgehog
